# Sprout

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  oldCMakeLists.txt  readTest.C  readTest_C.d  readTest_C_ACLiC_dict_rdict.pcm  rootlogon.C  test.C  test.root  testFile.root  testMacro1.C  test_C.d  test_C_ACLiC_dict_rdict.pcm
Demos/: README.md
Demos/FitDemo/: fitDemoMacro.C  myParamFile.txt  noStartValParamFile1.txt  noStartValParamFile2.txt
Demos/HistogramDemo/: HistDemoMacro.C  myFile.root
include/: HistogramHelper.h  RHelperLinkDef.h  RHfit.h  RHtree.h  SproutCut.h  SproutFit.h  SproutHist.h  SproutLinkDef.h  SproutParam.h  SproutPlot.h  SproutTree.h
source/: HistogramHelper.cxx  RHfit.cxx  RHtree.cxx  SproutCut.cxx  SproutFit.cxx  SproutPlot.cxx  SproutTree.cxx
